fixed mobile nav overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,17 +46,17 @@ ul li {
   backdrop-filter: blur(10px);
 }
 .mobilenav {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100vh;
-  top: -100vh;
-  left: 0;
-  transition: 0.3s linear;
+  top: 74px;
+  left: -100%;
+  transition: 0.3s ease-in-out;
   background-color: white;
   z-index: 300;
 }
 .show {
-  top: 74px;
+  left: 0;
 }
 @layer components {
   .inputstyle {
